--- a/goodmanpark_style.css
+++ b/goodmanpark_style.css
@@ -7,11 +7,12 @@ body {
 	color: black;
 	text-align: center;
 	width: 100%;
-	height: 50px;
+	height: 65px;
 	padding: 0px 0px 15px 0px;
 	background: white;
 	box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.4);
 	position: fixed;
+	z-index:1000;
 }
 .main_content {
 	height: 100vh;
@@ -51,6 +52,7 @@ body {
 	background: white;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, .2);
 	transition: .3s all ease-in-out;
+	z-index:1001;
 }
 .menu_panel.menu_open {
 	left: 0px;
@@ -62,7 +64,7 @@ body {
 	margin-left: 10%;
 	padding-top: 50px;
 	text-align: center;
-	height: 55px;
+	height: 120px;
 	font-size: large;
 	font-weight: bold;
 	cursor: pointer;
@@ -76,4 +78,26 @@ a {
 	text-align: center;
 	font-size: xx-large;
 	font-weight: bolder;
+}
+.pro_bono_company {
+    font-weight: bold;
+}
+.pro_bono_location {
+    font-style: italic;
+}
+.homepage_logo {
+	width: 100%;
+}
+.about_line {
+	margin-bottom: 20px;
+}
+.about_key {
+	font-size: xx-large;
+    font-weight: bold;
+	font-style: italic;
+}
+.about_blurb {
+	font-size: large;
+	font-style: italic;
+	text-align: left;
 }
